# Agents

./: README.md
nanobook/: .gitignore  README.md  nanobook_output.md  pyproject.toml
nanobook/src/nanobook/: crew.py  main.py
nanobook/src/nanobook/config/: agents.yaml  tasks.yaml
nanobook/src/nanobook/tools/: custom_tool.py
