[project]
name = "nanobook"
version = "0.1.0"
description = "nanobook using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.7",
    "langchain[openai]>=1.3.11",
]

[project.scripts]
nanobook = "nanobook.main:run"
run_crew = "nanobook.main:run"
train = "nanobook.main:train"
replay = "nanobook.main:replay"
test = "nanobook.main:test"
run_with_trigger = "nanobook.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
